--- a/j8work-full.ini
+++ b/j8work-full.ini
@@ -14,9 +14,9 @@ surge_ruleset=🎮 国际游戏,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🎮 国际游戏,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 surge_ruleset=📹 Youtube,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 surge_ruleset=🎥 Netflix,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-surge_ruleset=🎥 DisneyPlus,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
+surge_ruleset=🎥 Disney,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 surge_ruleset=🎥 Amazon,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Amazon.list
-surge_ruleset=🎥 HBO,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HBO.list
+surge_ruleset=🎥 HBOMax,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HBO.list
 surge_ruleset=🎥 巴哈姆特,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 surge_ruleset=🌏 国内媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 surge_ruleset=🌍 国外媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -29,43 +29,42 @@ surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Download.list
 surge_ruleset=🎯 国内网络,[]GEOIP,CN
 surge_ruleset=🐟 其他网站,[]FINAL
-custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]DIRECT
+custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]DIRECT
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🎯 国内网络`select`[]DIRECT`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]🔑 专用线路
-custom_proxy_group=📲 Telegram`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎯 国内网络`select`[]DIRECT`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]🔑 专线自选
+custom_proxy_group=📲 Telegram`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
 
-custom_proxy_group=📹 Youtube`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🎥 奈飞节点`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 DisneyPlus`select`[]🎥 迪士尼节点`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 DisneyPlus`select`[]🎥 迪士尼节点`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 Amazon`select`[]🎥 亚马逊节点`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 HBO`select`[]🎥 HBO节点`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 全局设置`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=📹 Youtube`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🎥 Netflix自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎥 Disney`select`[]🎥 Disney+自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎥 Amazon`select`[]🎥 Amazon自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎥 HBOMax`select`[]🎥 HBOMax自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎥 巴哈姆特`select`[]🇨🇳 台湾自选`[]🚀 全局设置`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
 
 
-custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🔑 专用线路`[]🚀 手动选择
-custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🔑 专用线路`[]🚀 手动选择
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🔑 专用线路`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🔑 专线自选`[]🚀 手动选择
+custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🔑 专线自选`[]🚀 手动选择
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 全局设置`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 其他网站`select`[]🚀 全局设置`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动选择
-custom_proxy_group=🇭🇰 香港节点`select`(港|HK|Hong Kong)
-custom_proxy_group=🇯🇵 日本节点`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
-custom_proxy_group=🇺🇲 美国节点`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
-custom_proxy_group=🇸🇬 新加坡节点`select`(新|新加坡|坡|狮城|狮|SG|Singapore)
-custom_proxy_group=🇨🇳 台湾节点`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=🇰🇷 韩国节点`select`(KR|Korea|KOR|首尔|春川|韩|韓)
-custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|Netflix|NETFLIX|Media|原生|解锁)
-custom_proxy_group=🎥 迪士尼节点`select`(D+|Disney|DISNEY|Media|原生|解锁)
-custom_proxy_group=🎥 亚马逊节点`select`(Prime|PRIME|Amazon|AMAZON|亚马逊|Media|原生|解锁)
-custom_proxy_group=🎥 HBO节点`select`(hbo|HBO|Media|原生|解锁)
-custom_proxy_group=🔑 专用线路`select`(IPLC|IEPL|iplc|iepl|专线)
+custom_proxy_group=🐟 其他网站`select`[]🚀 全局设置`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🚀 手动选择
+custom_proxy_group=🇭🇰 香港自选`select`(港|HK|Hong Kong)
+custom_proxy_group=🇯🇵 日本自选`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
+custom_proxy_group=🇺🇲 美国自选`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=🇸🇬 新加坡自选`select`(新|新加坡|坡|狮城|狮|SG|Singapore)
+custom_proxy_group=🇨🇳 台湾自选`select`(台|新北|彰化|TW|Taiwan)
+custom_proxy_group=🇰🇷 韩国自选`select`(KR|Korea|KOR|首尔|春川|韩|韓)
+custom_proxy_group=🎥 Netflix自选`select`(NF|奈飞|Netflix|NETFLIX|Media|原生|解锁)
+custom_proxy_group=🎥 Disney+自选`select`(D+|Disney|DISNEY|Media|原生|解锁)
+custom_proxy_group=🎥 Amazon自选`select`(Prime|PRIME|Amazon|AMAZON|亚马逊|Media|原生|解锁)
+custom_proxy_group=🎥 HBOMax自选`select`(hbo|HBO|Media|原生|解锁)
+custom_proxy_group=🔑 专线自选`select`(IPLC|IEPL|iplc|iepl|专线)
 enable_rule_generator=true
 overwrite_original_rules=true
 
