--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -44,7 +44,7 @@ custom_proxy_group=🎥 Disney`select`[]🎥 Disney+自选`[]🚀 全局设置`[
 custom_proxy_group=🎥 Amazon`select`[]🎥 Amazon自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🎥 HBOMax`select`[]🎥 HBOMax自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🎥 巴哈姆特`select`[]🇨🇳 台湾自选`[]🚀 全局设置`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🏵️ OpenAI`select`[]🚀 全局设置`[]🇸🇬 新加坡自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🏵️ OpenAI`select`[]🚀 全局设置`[]🇸🇬 新加坡自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🚀 手动选择`[]DIRECT`^(?!港)
 
 custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🔑 专线自选`[]🚀 手动选择
