--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -2,7 +2,7 @@
 #规则集
 surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-surge_ruleset=🛑 广告拦截,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+surge_ruleset=🚫 广告拦截,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 surge_ruleset=🍃 应用净化,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 # surge_ruleset=📢 谷歌FCM,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
@@ -34,30 +34,30 @@ surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🎯 国内网络,[]GEOIP,CN
 surge_ruleset=🐟 其他网站,[]FINAL
 # 显示的分组
-custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]DIRECT
-custom_proxy_group=🚀 手动选择`select`.*
+custom_proxy_group=🚀 全局设置`select`[]👆 手动选择`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🎯 国内网络`select`[]DIRECT`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]🔑 专线自选
-custom_proxy_group=📲 Telegram`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=📹 Youtube`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🎥 Netflix自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 Disney`select`[]🎥 Disney+自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 Amazon`select`[]🎥 Amazon自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 HBOMax`select`[]🎥 HBOMax自选`[]🚀 全局设置`[]♻️ 自动选择`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 巴哈姆特`select`[]🇨🇳 台湾自选`[]🚀 全局设置`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🏵️ OpenAI`select`[]🚀 全局设置`[]🇸🇬 新加坡自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🚀 手动选择`[]DIRECT`^(?!港)
+custom_proxy_group=👆 手动选择`select`.*
+custom_proxy_group=🎯 国内网络`select`[]DIRECT`.*
+custom_proxy_group=📲 Telegram`select``[]♻️ 自动选择`[]👆 手动选择`[]DIRECT
+custom_proxy_group=🏵️ OpenAI`select`^(?!港)
+custom_proxy_group=📹 Youtube`select`[]👆 手动选择`[]🇭🇰 香港自选`[]🇸🇬 新加坡自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🎥 Netflix自选`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`.+
+custom_proxy_group=🎥 Disney`select`[]🎥 Disney+自选`.+
+custom_proxy_group=🎥 Amazon`select`[]🎥 Amazon自选`.+
+custom_proxy_group=🎥 HBOMax`select`[]🎥 HBOMax自选`.+
+custom_proxy_group=🎥 巴哈姆特`select`[]🇨🇳 台湾自选
 
-custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🔑 专线自选`[]🚀 手动选择
-custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🔑 专线自选`[]🚀 手动选择
-#custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]🔑 专线自选`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 全局设置`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)`.*
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]👆 手动选择`.+`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]👆 手动选择
+custom_proxy_group=🌏 出海媒体`select`[]👆 手动选择`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`.*`[]DIRECT
+#custom_proxy_group=📢 谷歌FCM`select`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]👆 手动选择`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]👆 手动选择`.+`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]👆 手动选择`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]👆 手动选择`.+`[]DIRECT
+custom_proxy_group=🎮 国际游戏`select`.+
+custom_proxy_group=🎶 网易音乐`select`[]DIRECT`(网易|音乐|解锁|Music|NetEase)`.*
+custom_proxy_group=🚫 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 其他网站`select`[]🚀 全局设置`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]🚀 手动选择
+custom_proxy_group=🐟 其他网站`select`[]DIRECT`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]👆 手动选择`.+`[]DIRECT
 custom_proxy_group=🇭🇰 香港自选`select`(港|HK|Hong Kong)
 custom_proxy_group=🇯🇵 日本自选`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)
 custom_proxy_group=🇺🇲 美国自选`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
