--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -39,7 +39,8 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=👆 手动选择`select`.*
 custom_proxy_group=🎯 国内网络`select`[]DIRECT`.*
 custom_proxy_group=📲 Telegram`select``[]♻️ 自动选择`[]👆 手动选择`[]DIRECT
-custom_proxy_group=🏵️ OpenAI`select`^(?!港)(?!.*[^a-zA-Z]+[oO]).* # 不含港 和 o/O 单词开头的节点
+#openai 不支持港 和 o/O(racle) 单词开头的节点
+custom_proxy_group=🏵️ OpenAI`select`^(?!港)(?!.*[^a-zA-Z]+[oO]).* 
 custom_proxy_group=📹 Youtube`select`[]👆 手动选择`[]🇭🇰 香港自选`[]🇸🇬 新加坡自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🎥 Netflix自选`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`.+
 custom_proxy_group=🎥 Disney`select`[]🎥 Disney+自选`.+
