--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -4,8 +4,8 @@ surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 surge_ruleset=🚫 广告拦截,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 surge_ruleset=🍃 应用净化,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-# surge_ruleset=📢 谷歌FCM,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+; surge_ruleset=📢 谷歌FCM,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+; surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 surge_ruleset=Ⓜ️ 微软云盘,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 surge_ruleset=🍎 苹果服务,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 surge_ruleset=📲 Telegram,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
@@ -28,7 +28,7 @@ surge_ruleset=🌏 出海媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🌏 出海媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/IqiyiHMT.list
 surge_ruleset=🚀 全局设置,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+; surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Download.list
 surge_ruleset=🎯 国内网络,[]GEOIP,CN
