--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -73,6 +73,8 @@ custom_proxy_group=🔑 专线自选`select`(IPLC|IEPL|iplc|iepl|专线)
 custom_proxy_group=㊙️ PT站点`select`[]DIRECT`[]🇭🇰 香港自选
 overwrite_original_rules=true
 
+managed_config_prefix=https://subconverter.h6.work
+
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
