--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -6,10 +6,10 @@ surge_ruleset=🚫 广告拦截,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🍃 应用净化,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ; surge_ruleset=📢 谷歌FCM,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ; surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-surge_ruleset=Ⓜ️ 微软云盘,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+surge_ruleset=Ⓜ️ 微软服务,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list
 surge_ruleset=🍎 苹果服务,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 surge_ruleset=📲 Telegram,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-surge_ruleset=🏵️ OpenAI,https://cdn.staticaly.com/gh/j8work/sub-ini/main/OpenAI.list
+surge_ruleset=🏵️ OpenAI,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 surge_ruleset=㊙️ PT站点,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/PrivateTracker.list
 surge_ruleset=🎶 网易音乐,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 surge_ruleset=🎮 国际游戏,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
@@ -52,7 +52,7 @@ custom_proxy_group=🌍 国外媒体`select`[]👆 手动选择`.+`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]👆 手动选择
 custom_proxy_group=🌏 出海媒体`select`[]👆 手动选择`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`.*`[]DIRECT
 #custom_proxy_group=📢 谷歌FCM`select`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]👆 手动选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]👆 手动选择`.+`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]👆 手动选择`.+`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]👆 手动选择`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]👆 手动选择`.+`[]DIRECT
 custom_proxy_group=🎮 国际游戏`select`.+
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`(网易|音乐|解锁|Music|NetEase)`.*
