--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -52,8 +52,8 @@ custom_proxy_group=🌍 国外媒体`select`[]👆 手动选择`.+`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]👆 手动选择
 custom_proxy_group=🌏 出海媒体`select`[]👆 手动选择`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`.*`[]DIRECT
 #custom_proxy_group=📢 谷歌FCM`select`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]👆 手动选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]👆 手动选择`.+`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]👆 手动选择`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`[]👆 手动选择`.+`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]👆 手动选择`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`.+`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]👆 手动选择`[]🇺🇲 美国自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇸🇬 新加坡自选`[]🇯🇵 日本自选`[]🇰🇷 韩国自选`.+`[]DIRECT
 custom_proxy_group=🎮 国际游戏`select`.+
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`(网易|音乐|解锁|Music|NetEase)`.*
 custom_proxy_group=🚫 广告拦截`select`[]REJECT`[]DIRECT
