--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -34,14 +34,14 @@ surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🎯 国内网络,[]GEOIP,CN
 surge_ruleset=🐟 其他网站,[]FINAL
 # 显示的分组
-custom_proxy_group=🚀 全局设置`select`[]👆 手动选择`.*`[]DIRECT
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🚀 全局设置`select`[]DIRECT`[]♻️ 自动低延`[]👆 手动选择`.*
+custom_proxy_group=♻️ 自动低延`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=👆 手动选择`select`.*
 custom_proxy_group=🎯 国内网络`select`[]DIRECT`.*
-custom_proxy_group=📲 Telegram`select``[]♻️ 自动选择`[]👆 手动选择`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]♻️ 自动低延`[]👆 手动选择`[]DIRECT
 #openai 不支持港 和 o/O(racle) 单词开头的节点
 custom_proxy_group=🏵️ OpenAI`select`^(?!港)(?!.*\b([oO]).+\b).*$
-custom_proxy_group=📹 Youtube`select`[]👆 手动选择`[]🇭🇰 香港自选`[]🇸🇬 新加坡自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`[]DIRECT
+custom_proxy_group=📹 Youtube`select`[]♻️ 自动低延`[]👆 手动选择`[]🇭🇰 香港自选`[]🇸🇬 新加坡自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选
 custom_proxy_group=🎥 Netflix`select`[]🎥 Netflix自选`[]🇸🇬 新加坡自选`[]🇭🇰 香港自选`[]🇨🇳 台湾自选`[]🇯🇵 日本自选`[]🇺🇲 美国自选`[]🇰🇷 韩国自选`.+
 custom_proxy_group=🎥 Disney`select`[]🎥 Disney+自选`.+
 custom_proxy_group=🎥 Amazon`select`[]🎥 Amazon自选`.+
