--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -1,38 +1,38 @@
 [custom]
 #规则集
-surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-surge_ruleset=🚫 广告拦截,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-surge_ruleset=🍃 应用净化,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-; surge_ruleset=📢 谷歌FCM,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-; surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-surge_ruleset=Ⓜ️ 微软服务,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list
-surge_ruleset=🍎 苹果服务,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-surge_ruleset=📲 Telegram,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-surge_ruleset=🏵️ OpenAI,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-surge_ruleset=㊙️ PT站点,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/PrivateTracker.list
-surge_ruleset=🎶 网易音乐,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
-surge_ruleset=🎮 国际游戏,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-surge_ruleset=🎮 国际游戏,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
-surge_ruleset=🎮 国际游戏,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-surge_ruleset=📹 Youtube,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-surge_ruleset=🎥 Netflix,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-surge_ruleset=🎥 Disney,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
-surge_ruleset=🎥 Amazon,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Amazon.list
-surge_ruleset=🎥 HBOMax,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HBO.list
-surge_ruleset=🎥 巴哈姆特,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
+ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🚫 广告拦截,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🍃 应用净化,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+; ruleset=📢 谷歌FCM,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+; ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=Ⓜ️ 微软服务,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list
+ruleset=🍎 苹果服务,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=📲 Telegram,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🏵️ OpenAI,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=㊙️ PT站点,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/PrivateTracker.list
+ruleset=🎶 网易音乐,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
+ruleset=🎮 国际游戏,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+ruleset=🎮 国际游戏,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+ruleset=🎮 国际游戏,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=📹 Youtube,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🎥 Netflix,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🎥 Disney,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
+ruleset=🎥 Amazon,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Amazon.list
+ruleset=🎥 HBOMax,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HBO.list
+ruleset=🎥 巴哈姆特,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 
-surge_ruleset=🌏 国内媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-surge_ruleset=🌍 国外媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-surge_ruleset=🌏 出海媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-surge_ruleset=🌏 出海媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/IqiyiHMT.list
-surge_ruleset=🚀 全局设置,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-; surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-surge_ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Download.list
-surge_ruleset=🎯 国内网络,[]GEOIP,CN
-surge_ruleset=🐟 其他网站,[]FINAL
+ruleset=🌏 国内媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=🌍 国外媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🌏 出海媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset=🌏 出海媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/IqiyiHMT.list
+ruleset=🚀 全局设置,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+; ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🎯 国内网络,[]GEOIP,CN
+ruleset=🐟 其他网站,[]FINAL
 # 显示的分组
 custom_proxy_group=🚀 全局设置`select`[]DIRECT`[]♻️ 自动低延`[]👆 手动选择`.*
 custom_proxy_group=♻️ 自动低延`url-test`.*`http://www.gstatic.com/generate_204`300
