--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -74,6 +74,7 @@ custom_proxy_group=㊙️ PT站点`select`[]DIRECT`[]🇭🇰 香港自选`.*
 overwrite_original_rules=true
 
 managed_config_prefix=https://subconverter.h6.work
+config_update_interval = 86400
 
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
