--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -37,8 +37,8 @@ ruleset=🐟 其他网站,[]FINAL
 custom_proxy_group=🚀 全局设置`select`[]DIRECT`[]♻️ 自动低延`[]👆 手动选择`.*
 custom_proxy_group=♻️ 自动低延`url-test`.*`http://www.gstatic.com/generate_204`300
 
-custom_proxy_group=🔄 鸡免专`fallback`((.*限時:).*(?!\D[0-9]時).+@鸡不\*食)|(.*限時:).*(?!\D[0-9]時)|@专收\*\*宝`http://www.gstatic.com/ge(.*限時:).*(?!\D[0-9]時)|@鸡不\*食|@专收传\*宝`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🔄 免鸡专`fallback`(.*限時:).*(?!\D[0-9]時)|@鸡不\*食|@专收\*\*宝`http://www.gstatic.com/ge(.*限時:).*(?!\D[0-9]時)|@鸡不\*食|@专收传\*宝`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🔄 鸡免专`fallback`((.*限時:).*(?!\D[0-9]時).+@鸡不\*食)|(.*限時:).*(?!\D[0-9]時)|@专收\*\*宝`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🔄 免鸡专`fallback`(.*限時:).*(?!\D[0-9]時)|@鸡不\*食|@专收\*\*宝`http://www.gstatic.com/generate_204`300
 
 custom_proxy_group=👆 手动选择`select`.*
 custom_proxy_group=🎯 国内网络`select`[]DIRECT`.*
