--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -4,8 +4,6 @@ ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🚫 广告拦截,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-; ruleset=📢 谷歌FCM,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-; ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=Ⓜ️ 微软服务,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list
 ruleset=🍎 苹果服务,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 Telegram,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
@@ -28,7 +26,6 @@ ruleset=🌏 出海媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🌏 出海媒体,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/IqiyiHMT.list
 ruleset=🚀 全局设置,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-; ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 国内网络,[]GEOIP,CN
@@ -37,8 +34,8 @@ ruleset=🐟 其他网站,[]FINAL
 custom_proxy_group=🚀 全局设置`select`[]DIRECT`[]♻️ 自动低延`[]👆 手动选择`.*
 custom_proxy_group=♻️ 自动低延`url-test`.*`http://www.gstatic.com/generate_204`300
 
-
-custom_proxy_group=🔄 鸡免专`fallback`(.*限時:(?!\D[0-9]時).*@鸡不))`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🔄 鸡免专`fallback`(.*限時:(?!\D[0-9]時).*@鸡不\*食)|(.*限時:).*(?!\D[0-9]時)|@专收\*\*宝`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🔄 免鸡专`fallback`(.*限時:(?!\D[0-9]時))|@鸡不\*食|@专收\*\*宝`http://www.gstatic.com/generate_204`300
 
 custom_proxy_group=👆 手动选择`select`.*
 custom_proxy_group=🎯 国内网络`select`[]DIRECT`.*
