--- a/j8work-full+pt.ini
+++ b/j8work-full+pt.ini
@@ -31,7 +31,7 @@ ruleset=🎯 国内网络,https://cdn.staticaly.com/gh/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🎯 国内网络,[]GEOIP,CN
 ruleset=🐟 其他网站,[]FINAL
 # 显示的分组
-custom_proxy_group=🚀 全局设置`select`[]DIRECT`[]♻️ 自动低延`[]👆 手动选择`.*
+custom_proxy_group=🚀 全局设置`select`[]DIRECT`[]♻️ 自动低延`[]👆 手动选择`🔄 MJJ刷流`.*
 custom_proxy_group=♻️ 自动低延`url-test`.*`http://www.gstatic.com/generate_204`300
 
 custom_proxy_group=🔄 MJJ刷流`fallback`^.+限時.+@鸡不\*食`限時`@专收\*\*宝`http://www.gstatic.com/generate_204`300
